--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "main": "index.js",
   "author": "oimasterkafuu",
   "license": "AGPL-3.0",
+  "scripts": {
+    "test": "jest --verbose --detectOpenHandles --forceExit --logHeapUsage --showSeed --coverage --bail",
+    "copy": "bash add-copyright.sh"
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jest": "^29.7.0",
     "socket.io": "^4.7.5"
   }
 }
