--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "chat",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "oimasterkafuu",
-  "license": "AGPL-3.0",
-  "scripts": {
-    "test": "jest --verbose --detectOpenHandles --forceExit --logHeapUsage --showSeed --coverage --bail",
-    "copy": "bash add-copyright.sh",
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jest": "^29.7.0",
-    "socket.io": "^4.7.5"
-  }
+    "name": "chat",
+    "version": "1.0.0",
+    "main": "index.js",
+    "author": "oimasterkafuu",
+    "license": "AGPL-3.0",
+    "scripts": {
+        "test": "jest --verbose --detectOpenHandles --forceExit --logHeapUsage --showSeed --coverage --bail",
+        "copy": "bash add-copyright.sh",
+        "start": "node index.js",
+        "format": "prettier --write \"**/*.{js,html,css,json,md}\""
+    },
+    "dependencies": {
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "socket.io": "^4.7.5"
+    },
+    "devDependencies": {
+        "jest": "^29.7.0",
+        "prettier": "^3.3.3"
+    }
 }
